--- a/templates/core/clientes.html
+++ b/templates/core/clientes.html
@@ -9,7 +9,7 @@
         </h1>
 
         <div class="my-6 w-2/16">
-            <button id="btn_cliente_modal_agregar" class="flex items-center justify-between w-full px-4 py-2 text-sm font-medium leading-5 text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-lg active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple">
+            <button id="btn_cliente_modal_agregar" class="btn_color_orange flex items-center justify-between w-full px-4 py-2 text-sm font-medium leading-5 text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-lg active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple">
                 Registrar nuevo
                 <span class="ml-2" aria-hidden="true">+</span>
             </button>
