--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -108,6 +108,7 @@
                 <span class="ml-4">Proveedores</span>
                 </a>
             </li>
+            {% if request.user.is_superuser %}
             <li class="relative px-6 py-3">
                 <a
                 class="inline-flex items-center w-full text-sm font-semibold transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200"
@@ -131,6 +132,7 @@
                 <span class="ml-4">Usuarios</span>
                 </a>
             </li>
+            {% endif %}
             <li class="relative px-6 py-3">
                 <a
                 class="inline-flex items-center w-full text-sm font-semibold transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200"
