--- a/templates/core/clientes.html
+++ b/templates/core/clientes.html
@@ -20,15 +20,14 @@
         <div class="w-full p-4 bg-white rounded-lg shadow-xs dark:bg-gray-800">
             <input type="hidden" id="clientes_selected_id" value="">
 
-            <table id="tabla_clientes" class="w-full whitespace-no-wrap " width="99%">
+            <table id="tabla_clientes" class="tablas w-full whitespace-no-wrap " width="99%">
                 <thead>
                     <tr class="text-xs font-semibold tracking-wide text-left text-gray-500 uppercase border-b dark:border-gray-700 bg-gray-50 dark:text-gray-400 dark:bg-gray-800">
-                        <th class="px-4 py-3">Cédula</th>
                         <th class="px-4 py-3">Nombres</th>
-                        <th class="px-4 py-3">Apellidos</th>
-                        <th class="px-4 py-3">Teléfono</th>
-                        <th class="px-4 py-3">Email</th>
-                        <th class="px-4 py-3">Acciones</th>
+                        <th class="px-4 py-3">Cedula</th>
+                        <th class="px-4 py-3">Telefóno</th>
+                        <th class="px-4 py-3">Correo</th>
+                        <th class="px-4 py-3">Status</th>
                     </tr>
                 </thead>
                 <tbody class="tbody_table bg-white divide-y dark:divide-gray-700 dark:bg-gray-800"></tbody>
