Pasar tarjetas a tablas

--- a/templates/core/productos.html
+++ b/templates/core/productos.html
@@ -20,13 +20,13 @@
         <div class="w-full p-4 bg-white rounded-lg shadow-xs dark:bg-gray-800">
             <input type="hidden" id="productos_selected_id" value="">
 
-            <table id="tabla_productos" class="w-full whitespace-no-wrap " width="99%">
+            <table id="tabla_productos" class="tablas w-full whitespace-no-wrap " width="99%">
                 <thead>
                     <tr class="text-xs font-semibold tracking-wide text-left text-gray-500 uppercase border-b dark:border-gray-700 bg-gray-50 dark:text-gray-400 dark:bg-gray-800">
+                        <th class="px-4 py-3">Id</th>
                         <th class="px-4 py-3">Nombre</th>
                         <th class="px-4 py-3">Cantidad</th>
                         <th class="px-4 py-3">Precio</th>
-                        <th class="px-4 py-3">Acciones</th>
                     </tr>
                 </thead>
                 <tbody class="tbody_table bg-white divide-y dark:divide-gray-700 dark:bg-gray-800"></tbody>
