--- a/templates/core/servicios.html
+++ b/templates/core/servicios.html
@@ -19,7 +19,7 @@
         <div class="w-full p-4 bg-white rounded-lg shadow-xs dark:bg-gray-800">
             <input type="hidden" id="servicios_selected_id" value="">
 
-            <table id="tabla_servicios" class="w-full whitespace-no-wrap " width="99%">
+            <table id="tabla_servicios" class="tablas w-full whitespace-no-wrap " width="99%">
                 <thead>
                     <tr class="text-xs font-semibold tracking-wide text-left text-gray-500 uppercase border-b dark:border-gray-700 bg-gray-50 dark:text-gray-400 dark:bg-gray-800">
                         <th class="px-4 py-3">Código</th>
