--- a/templates/core/ventas.html
+++ b/templates/core/ventas.html
@@ -12,18 +12,16 @@
         <div class="w-full p-4 bg-white rounded-lg shadow-xs dark:bg-gray-800">
             <input type="hidden" id="venta_selected_id" value="">
 
-            <table id="tabla_ventas" class="w-full whitespace-no-wrap " width="99%">
+            <table id="tabla_ventas" class="tablas w-full whitespace-no-wrap " width="99%">
                 <thead>
                     <tr class="text-xs font-semibold tracking-wide text-left text-gray-500 uppercase border-b dark:border-gray-700 bg-gray-50 dark:text-gray-400 dark:bg-gray-800">
-                        <th class="px-4 py-3">ID</th>
-                        <th class="px-4 py-3">Nro de Venta</th>
                         <th class="px-4 py-3">Fecha</th>
                         <th class="px-4 py-3">Cedula</th>
                         <th class="px-4 py-3">Nombre</th>
                         <th class="px-4 py-3">Total Venta</th>
                     </tr>
                 </thead>
-                <tbody class="bg-white divide-y dark:divide-gray-700 dark:bg-gray-800"></tbody>
+                <tbody class="tbody_table bg-white divide-y dark:divide-gray-700 dark:bg-gray-800"></tbody>
             </table>
         </div>
     </div>
