--- a/templates/core/proveedores.html
+++ b/templates/core/proveedores.html
@@ -19,15 +19,14 @@
         <div class="w-full p-4 bg-white rounded-lg shadow-xs dark:bg-gray-800">
             <input type="hidden" id="proveedores_selected_id" value="">
 
-            <table id="tabla_proveedores" class="w-full whitespace-no-wrap " width="99%">
+            <table id="tabla_proveedores" class="tablas w-full whitespace-no-wrap " width="99%">
                 <thead>
                     <tr class="text-xs font-semibold tracking-wide text-left text-gray-500 uppercase border-b dark:border-gray-700 bg-gray-50 dark:text-gray-400 dark:bg-gray-800">
-                        <th class="px-4 py-3">Rif</th>
+                        <th class="px-4 py-3">ID</th>
                         <th class="px-4 py-3">Nombres</th>
-                        <th class="px-4 py-3">Apellidos</th>
+                        <th class="px-4 py-3">rif</th>
                         <th class="px-4 py-3">Teléfono</th>
                         <th class="px-4 py-3">Email</th>
-                        <th class="px-4 py-3">Acciones</th>
                     </tr>
                 </thead>
                 <tbody class="tbody_table bg-white divide-y dark:divide-gray-700 dark:bg-gray-800"></tbody>
