--- a/templates/core/usuarios.html
+++ b/templates/core/usuarios.html
@@ -19,17 +19,13 @@
         <div class="w-full p-4 bg-white rounded-lg shadow-xs dark:bg-gray-800">
             <input type="hidden" id="usuarios_selected_id" value="">
 
-            <table id="tabla_usuarios" class="w-full whitespace-no-wrap " width="99%">
+            <table id="tabla_usuarios" class="tablas w-full whitespace-no-wrap " width="99%">
                 <thead>
-                    <tr class="text-xs font-semibold tracking-wide text-left text-gray-500 uppercase border-b dark:border-gray-700 bg-gray-50 dark:text-gray-400 dark:bg-gray-800">
-                        <th class="px-4 py-3">Usuario</th>
-                        <th class="px-4 py-3">Cédula</th>
+                    <tr class="text-xs font-semibold tracking-wide text-left text-gray-500 uppercase border-b dark:border-gray-700 bg-gray-50 dark:text-gray-400 dark:bg-gray-800">  
                         <th class="px-4 py-3">Nombres</th>
-                        <th class="px-4 py-3">Apellidos</th>
+                        <th class="px-4 py-3">Cédula</th>
                         <th class="px-4 py-3">Teléfono</th>
                         <th class="px-4 py-3">Email</th>
-                        <th class="px-4 py-3">Rol</th>
-                        <th class="px-4 py-3">Acciones</th>
                     </tr>
                 </thead>
                 <tbody class="tbody_table bg-white divide-y dark:divide-gray-700 dark:bg-gray-800"></tbody>
