--- a/templates/core/ventas.html
+++ b/templates/core/ventas.html
@@ -15,6 +15,7 @@
             <table id="tabla_ventas" class="tablas w-full whitespace-no-wrap " width="99%">
                 <thead>
                     <tr class="text-xs font-semibold tracking-wide text-left text-gray-500 uppercase border-b dark:border-gray-700 bg-gray-50 dark:text-gray-400 dark:bg-gray-800">
+                        <th class="px-4 py-3">ID</th>
                         <th class="px-4 py-3">Fecha</th>
                         <th class="px-4 py-3">Cedula</th>
                         <th class="px-4 py-3">Nombre</th>
