Modificacion de roles de los usuarios

--- a/templates/core/usuarios.html
+++ b/templates/core/usuarios.html
@@ -130,8 +130,9 @@
                         <label class="block mt-4 text-sm">
                             <span class="text-gray-700 dark:text-gray-400">Rol</span>
                             <select id="usuario_agregar_rol" name="rol" class="block w-full mt-1 text-sm dark:text-gray-300 dark:border-gray-600 dark:bg-gray-700 form-select focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:focus:shadow-outline-gray">
-                                <option value="Admin">Admin</option>
-                                <option value="Usuario">Usuario</option>
+                                <option value="admin">Admin</option>
+                                <option value="gerenteVentas">Gerente de Ventas</option>
+                                <option value="vendedor">Vendedors</option>
                             </select>
                         </label>
     
