Se agrego status a usaurios, proveedores y clientes, ademas se arreglo bug en la edicion del gerente ventas y las funciones al asignar rol admin

--- a/core/static/core/css/styles.css
+++ b/core/static/core/css/styles.css
@@ -130,6 +130,7 @@ button:disabled  {
 .btn_detail_color {
 	background-color: #2e6dff !important;
     border: 0px;
+    color: white;
 }
 
 .btn_detail_color:hover{
