--- a/templates/core/clientes.html
+++ b/templates/core/clientes.html
@@ -67,10 +67,17 @@
                         <input id="cliente_detalles_email" class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input" readonly>
                     </label>
 
+                    <label class="block text-sm">
+                        <span class="text-gray-700 dark:text-gray-400">Status</span>
+                        <input id="cliente_detalles_status" class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input" readonly>
+                    </label>
+
                     <label class="block mt-4 text-sm">
                         <span class="text-gray-700 dark:text-gray-400">Dirección</span>
                         <textarea id="cliente_detalles_direccion" class="block w-full mt-1 text-sm dark:text-gray-300 dark:border-gray-600 dark:bg-gray-700 form-textarea focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:focus:shadow-outline-gray" rows="3" readonly></textarea>
                     </label>
+
+                    
                 </div>
             </div>
         </div>
@@ -186,6 +193,15 @@
                                     </svg>
                                 </div>
                             </div>
+                        </label>
+
+                        <label class="block mt-4 text-sm">
+                            <span class="text-gray-700 dark:text-gray-400">Status</span>
+                            <select id="cliente_modificar_status" name="status" class="block w-full mt-1 text-sm dark:text-gray-300 dark:border-gray-600 dark:bg-gray-700 form-select focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:focus:shadow-outline-gray">
+                                <option value="Activo">Activo</option>
+                                <option value="Inactivo">Inactivo</option>
+                                <option value="Suspendido">Suspendido</option>
+                            </select>
                         </label>
     
                         <label class="block mt-4 text-sm">
