--- a/templates/core/proveedores.html
+++ b/templates/core/proveedores.html
@@ -27,6 +27,7 @@
                         <th class="px-4 py-3">rif</th>
                         <th class="px-4 py-3">Teléfono</th>
                         <th class="px-4 py-3">Email</th>
+                        <th class="px-4 py-3">Status</th>
                     </tr>
                 </thead>
                 <tbody class="tbody_table bg-white divide-y dark:divide-gray-700 dark:bg-gray-800"></tbody>
@@ -73,6 +74,11 @@
                     <label class="block text-sm">
                         <span class="text-gray-700 dark:text-gray-400">Edad</span>
                         <input id="proveedor_detalles_edad" class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input" readonly>
+                    </label>
+
+                    <label class="block text-sm">
+                        <span class="text-gray-700 dark:text-gray-400">Status</span>
+                        <input id="proveedor_detalles_status" class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input" readonly>
                     </label>
 
                     <label class="block mt-4 text-sm">
@@ -213,6 +219,15 @@
                                     </svg>
                                 </div>
                             </div>
+                        </label>
+
+                        <label class="block mt-4 text-sm">
+                            <span class="text-gray-700 dark:text-gray-400">Status</span>
+                            <select id="proveedor_modificar_status" name="status" class="block w-full mt-1 text-sm dark:text-gray-300 dark:border-gray-600 dark:bg-gray-700 form-select focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:focus:shadow-outline-gray">
+                                <option value="Activo">Activo</option>
+                                <option value="Inactivo">Inactivo</option>
+                                <option value="Suspendido">Suspendido</option>
+                            </select>
                         </label>
     
                         <label class="block mt-4 text-sm">
