--- a/templates/core/proveedores.html
+++ b/templates/core/proveedores.html
@@ -226,7 +226,7 @@
                             <select id="proveedor_modificar_status" name="status" class="block w-full mt-1 text-sm dark:text-gray-300 dark:border-gray-600 dark:bg-gray-700 form-select focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:focus:shadow-outline-gray">
                                 <option value="Activo">Activo</option>
                                 <option value="Inactivo">Inactivo</option>
-                                <option value="Suspendido">Suspendido</option>
+                                <option value="Deshabilitado">Deshabilitado</option>
                             </select>
                         </label>
     
