--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -95,7 +95,7 @@
                             <span class="ml-4">Productos</span>
                         </a>
                     </li>
-                    <li class="relative px-6 py-3">
+                    <!-- <li class="relative px-6 py-3">
                         <a class="inline-flex items-center w-full text-sm font-semibold transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200"
                             href="{% url 'servicios' %}">
                             <svg class="w-5 h-5" aria-hidden="true" fill="none" stroke-linecap="round"
@@ -106,8 +106,8 @@
                             </svg>
                             <span class="ml-4">Servicios</span>
                         </a>
-                    </li>
-                    <li class="relative px-6 py-3">
+                    </li> -->
+                    <!-- <li class="relative px-6 py-3">
                         <a class="inline-flex items-center w-full text-sm font-semibold transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200"
                             href="{% url 'registro-servicios' %}">
                             <svg class="w-5 h-5" aria-hidden="true" fill="none" stroke-linecap="round"
@@ -116,8 +116,8 @@
                             </svg>
                             <span class="ml-4">Procesar Servicio</span>
                         </a>
-                    </li>
-                    <li class="relative px-6 py-3">
+                    </li> -->
+                    <!-- <li class="relative px-6 py-3">
                         <a class="inline-flex items-center w-full text-sm font-semibold transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200"
                             href="{% url 'servicio-facturado' %}">
                             <svg class="w-5 h-5" aria-hidden="true" fill="none" stroke-linecap="round"
@@ -128,7 +128,7 @@
                             </svg>
                             <span class="ml-4">Servicios Facturados</span>
                         </a>
-                    </li>
+                    </li> -->
                     <li class="relative px-6 py-3">
                         <a class="inline-flex items-center w-full text-sm font-semibold transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200"
                             href="{% url 'registro-ventas' %}">
@@ -153,7 +153,7 @@
                             <span class="ml-4">Ventas</span>
                         </a>
                     </li>
-                    <li class="relative px-6 py-3">
+                    <!-- <li class="relative px-6 py-3">
                         <a class="inline-flex items-center w-full text-sm font-semibold transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200"
                             href="{% url 'transacciones' %}">
                             <svg class="w-5 h-5" aria-hidden="true" fill="none" stroke-linecap="round"
@@ -164,7 +164,7 @@
                             </svg>
                             <span class="ml-4">Transacciones</span>
                         </a>
-                    </li>
+                    </li> -->
                     <!-- <li class="relative px-6 py-3">
                 <button
                 class="inline-flex items-center justify-between w-full text-sm font-semibold transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200"
@@ -430,7 +430,7 @@
                         </svg>
                     </button>
                     <!-- Search input -->
-                    <div class="flex justify-center flex-1 lg:mr-32">
+                    <div class="flex justify-center flex-1 lg:mr-32" style="visibility: hidden;">
                         <div class="relative w-full max-w-xl mr-6 focus-within:text-purple-500">
                             <div class="absolute inset-y-0 flex items-center pl-2">
                                 <svg class="w-4 h-4" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20">
@@ -494,7 +494,7 @@
                                             </span>
                                         </a>
                                     </li>
-                                    <li class="flex">
+                                    <!-- <li class="flex">
                                         <a class="inline-flex items-center justify-between w-full px-2 py-1 text-sm font-semibold transition-colors duration-150 rounded-md hover:bg-gray-100 hover:text-gray-800 dark:hover:bg-gray-800 dark:hover:text-gray-200"
                                             href="#">
                                             <span>Sales</span>
@@ -509,7 +509,7 @@
                                             href="#">
                                             <span>Alerts</span>
                                         </a>
-                                    </li>
+                                    </li> -->
                                 </ul>
                             </template>
                         </li>
@@ -528,7 +528,7 @@
                                     @click.away="closeProfileMenu" @keydown.escape="closeProfileMenu"
                                     class="absolute right-0 w-56 p-2 mt-2 space-y-2 text-gray-600 bg-white border border-gray-100 rounded-md shadow-md dark:border-gray-700 dark:text-gray-300 dark:bg-gray-700"
                                     aria-label="submenu">
-                                    <li class="flex">
+                                    <!-- <li class="flex">
                                         <a class="inline-flex items-center w-full px-2 py-1 text-sm font-semibold transition-colors duration-150 rounded-md hover:bg-gray-100 hover:text-gray-800 dark:hover:bg-gray-800 dark:hover:text-gray-200"
                                             href="#">
                                             <svg class="w-4 h-4 mr-3" aria-hidden="true" fill="none"
@@ -554,7 +554,7 @@
                                             </svg>
                                             <span>Settings</span>
                                         </a>
-                                    </li>
+                                    </li> -->
                                     <li class="flex">
                                         <a class="inline-flex items-center w-full px-2 py-1 text-sm font-semibold transition-colors duration-150 rounded-md hover:bg-gray-100 hover:text-gray-800 dark:hover:bg-gray-800 dark:hover:text-gray-200"
                                             href="{% url 'logout' %}">
