--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -5,7 +5,7 @@
 {% block body %}
 <div class="container px-6 mx-auto grid">
     <h2 class="my-6 text-2xl font-semibold text-gray-700 dark:text-gray-200">
-        Dashboard
+        Panel general
     </h2>
 
     <!-- Cards -->
