Arreglo de bug: Status

--- a/templates/core/usuarios.html
+++ b/templates/core/usuarios.html
@@ -245,9 +245,9 @@
                         <label class="block mt-4 text-sm">
                             <span class="text-gray-700 dark:text-gray-400">Status</span>
                             <select id="usuario_modificar_status" name="status" class="block w-full mt-1 text-sm dark:text-gray-300 dark:border-gray-600 dark:bg-gray-700 form-select focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:focus:shadow-outline-gray">
-                                <option value="Activo">Activo</option>
-                                <option value="Inactivo">Inactivo</option>
-                                <option value="Deshabilitado">Deshabilitado</option>
+                                <option value="activo">Activo</option>
+                                <option value="inactivo">Inactivo</option>
+                                <option value="deshabilitado">Deshabilitado</option>
                             </select>
                         </label>
     
