--- a/templates/core/productos.html
+++ b/templates/core/productos.html
@@ -62,7 +62,7 @@
                     
                     <label class="block mt-4 text-sm">
                         <span class="text-gray-700 dark:text-gray-400">Precio de producto</span>
-                        <input id="producto_detalles_precio" type="number" class="block w-full mt-1 text-sm text-black dark:text-gray-300 dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:focus:shadow-outline-gray form-input" readonly>
+                        <input id="producto_detalles_precio" class="block w-full mt-1 text-sm text-black dark:text-gray-300 dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:focus:shadow-outline-gray form-input" readonly>
                     </label>
 
                     <div id="container_producto_detalles_caucho" style="display: none;">
@@ -137,29 +137,19 @@
 
                         <label class="block mt-4 text-sm">
                             <span class="text-gray-700 dark:text-gray-400">Cantidad de producto</span>
-                            <input id="producto_agregar_cantidad" name="cantidad" type="number" class="block w-full mt-1 text-sm text-black dark:text-gray-300 dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:focus:shadow-outline-gray form-input">
+                            <input id="producto_agregar_cantidad" name="cantidad" type="number" min="0" class="block w-full mt-1 text-sm text-black dark:text-gray-300 dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:focus:shadow-outline-gray form-input">
                         </label>
                         
                         <label class="block mt-4 text-sm">
                             <span class="text-gray-700 dark:text-gray-400">Precio de producto</span>
-                            <input id="producto_agregar_precio" name="precio" type="number" class="block w-full mt-1 text-sm text-black dark:text-gray-300 dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:focus:shadow-outline-gray form-input">
+                            <input id="producto_agregar_precio" name="precio" type="number" min="0" class="block w-full mt-1 text-sm text-black dark:text-gray-300 dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:focus:shadow-outline-gray form-input">
                         </label>
+
+                        
 
                         <label class="block mt-4 text-sm">
                             <span class="text-gray-700 dark:text-gray-400">
-                                Clasificación de producto
-                            </span>
-                            <select id="producto_agregar_tipo" name="producto_type" class="block w-full mt-1 text-sm dark:text-gray-300 dark:border-gray-600 dark:bg-gray-700 form-select focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:focus:shadow-outline-gray">
-                                <option value="" selected="">Seleccionar clasificación de producto</option>
-                                <option value="1">Producto general</option>
-                                <!-- <option value="2">Caucho</option>
-                                <option value="3">Rin</option> -->
-                            </select>
-                        </label>
-
-                        <label class="block mt-4 text-sm">
-                            <span class="text-gray-700 dark:text-gray-400">
-                                Clasificación de producto
+                                Proveedor
                             </span>
                             <select id="producto_agregar_proveedor" name="proveedor" class="block w-full mt-1 text-sm dark:text-gray-300 dark:border-gray-600 dark:bg-gray-700 form-select focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:focus:shadow-outline-gray">
                                 <option value="" selected="">Seleccionar Proveedor</option>
